--- a/gradient_descent/concept_gd.ipynb
+++ b/gradient_descent/concept_gd.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "source": [
     " \n",
-    "***Gradient Descent — Explanation***\n",
+    "🟡***Gradient Descent — Explanation***\n",
     "\n",
-    "*Gradient Descent is an optimization algorithm used to find the best-fit line for a given dataset.\n",
-    "The main goal is to minimize the cost function, which measures how well our line fits the data.*\n",
+    "**Gradient Descent is an optimization algorithm used to find the best-fit line for a given dataset.\n",
+    "The main goal is to minimize the cost function, which measures how well our line fits the data\n",
     "\n",
     "-We start by initializing the parameters — the slope (m) and intercept (b) — usually with zeros.\n",
     "Then, through a series of iterations, we continuously update these parameters to reduce the cost.\n",
@@ -29,7 +29,7 @@
     "\n",
     "Y=mX+b\n",
     "\n",
-    "to make predictions for new data points."
+    "to make predictions for new data points.**"
    ]
   }
  ],
